Changes to fix jump links

--- a/assets/scss/_basic_elements.scss
+++ b/assets/scss/_basic_elements.scss
@@ -20,6 +20,8 @@ html {
     font-size:      18px;
     line-height:    $regular-line-height;
     -webkit-text-size-adjust: 100%;
+    // to consider breaks jump links on refresh in safari 
+    // scroll-behavior: smooth;
 }
 
 body {
@@ -65,6 +67,11 @@ ul  {
     margin-bottom: $regular-padding;
 }
 
+// clear fixed header for internal anchors
+
+:target {
+    scroll-margin-top: 3*$regular-margin;
+}
 
 
 // headings
@@ -80,8 +87,8 @@ h6 {
     color:          map-get($colors, 'cn-dark-teal');
     line-height:    1.3;
     margin: $regular-margin 0 $regular-margin/2;
-    scroll-margin-top: 4*$regular-margin;
-}
+    }
+
 
 h1 {
     font-size: $extra-large-text;
